Bug 220825 - [ZFS] Fix a typo in the delay_min_dirty_percent sysctl description
Summary: [ZFS] Fix a typo in the delay_min_dirty_percent sysctl description
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Some People
Assignee: Ed Maste
URL:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2017-07-18 11:20 UTC by Fabian Keil
Modified: 2017-07-26 23:06 UTC (History)
2 users (show)

See Also:
emaste: mfc-stable11+
emaste: mfc-stable10+
emaste: mfc-stable9-


Attachments
Fix typo in the delay_min_dirty_percent sysctl description (1.26 KB, patch)
2017-07-18 11:20 UTC, Fabian Keil
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Keil 2017-07-18 11:20:21 UTC
Created attachment 184468 [details]
Fix typo in the delay_min_dirty_percent sysctl description

The attached patch fixes a typo in the delay_min_dirty_percent sysctl description
    
The description is FreeBSD-specific and was added in r266497 to fix #189865.
    
Obtained from: ElectroBSD
Comment 1 commit-hook freebsd_committer freebsd_triage 2017-07-19 18:18:33 UTC
A commit references this bug:

Author: emaste
Date: Wed Jul 19 18:17:42 UTC 2017
New revision: 321218
URL: https://svnweb.freebsd.org/changeset/base/321218

Log:
  zfs: Fix a typo in the delay_min_dirty_percent sysctl description

  The description is FreeBSD-specific and was added in r266497
  to fix PR189865.

  PR:		220825
  Submitted by:	Fabian Keil
  Obtained from:	ElectroBSD
  MFC after:	1 week

Changes:
  head/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/dsl_pool.c
Comment 2 commit-hook freebsd_committer freebsd_triage 2017-07-26 23:03:40 UTC
A commit references this bug:

Author: emaste
Date: Wed Jul 26 23:03:22 UTC 2017
New revision: 321591
URL: https://svnweb.freebsd.org/changeset/base/321591

Log:
  MFC r321218: zfs: Fix a typo in the delay_min_dirty_percent sysctl description

  The description is FreeBSD-specific and was added in r266497
  to fix PR189865.

  PR:		220825
  Submitted by:	Fabian Keil
  Obtained from:	ElectroBSD

Changes:
_U  stable/11/
  stable/11/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/dsl_pool.c
Comment 3 commit-hook freebsd_committer freebsd_triage 2017-07-26 23:05:46 UTC
A commit references this bug:

Author: emaste
Date: Wed Jul 26 23:05:26 UTC 2017
New revision: 321592
URL: https://svnweb.freebsd.org/changeset/base/321592

Log:
  MFC r321218: zfs: Fix a typo in the delay_min_dirty_percent sysctl description

  The description is FreeBSD-specific and was added in r266497
  to fix PR189865.

  PR:		220825
  Submitted by:	Fabian Keil
  Obtained from:	ElectroBSD

Changes:
_U  stable/10/
  stable/10/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/dsl_pool.c